# NeuroNext-Project---NeuroShield

./: .gitignore  NeuroShield.code-workspace  convert_to_coreml.py  model_architecture  pyproject.toml  requirements.txt  setup.py
config/: settings.yaml
development/data_processing/: data_to_csv.py  preprocess_eeg.py  preprocess_labels_and_features.py  preprocess_physiology.py
development/feature_engineering/: extract_features_physiology.py
development/models/: nightmare_detection_model.pth  nightmare_detection_model.py
development/utils/: config.py
ios_app/NeuroShield/: AppDelegate.swift  NightmareDetectionManager.swift  ViewController.swift
ios_app/NeuroShield WatchKit App/: Interface.storyboard
ios_app/NeuroShield WatchKit Extension/: InterfaceController.swift
